.mozilla/firefox/1v1fz5mo.default/chrome/userChrome.css
/* Prevent white new tab flash - see alternative solution in userContent */
/* #browser vbox #appcontent tabbrowser, #content, #tabbrowser-tabpanels, browser[type=content-primary], browser[type=content] > html { background: black !important } */

/* Hide min,max,close buttons */
.titlebar-buttonbox-container{ display: none }

/* HIDE ORIGINAL FIREFOX TABS */
#TabsToolbar > .toolbar-items,
#TabsToolbar > .titlebar-spacer{ visibility: hidden }
#nav-bar{ 
  margin-top: -32px; 
  padding: 0px 15px 0px 75px !important; 
}

/* Provide space for min,max,close buttons */
/* #nav-bar{ margin-right: 38px;} */


/* SIDE BAR */
/* Minimize room on left and top of sidebar.*/
#sidebar-box{ margin-left: -4px; }
#sidebar-header{ 
  margin-top: -12px; 
  margin-bottom: -14px;  
  visibility: visible; 
}
#sidebar-splitter {
  display: none !important;
}

/* SIDE BAR: TREE STYLE TABS */
:root { --thin-tab-width: 36px; }
:root { --wide-tab-width: 350px; }
/* Shrink sidebar until hovered, when using Tree Style Tab. */
#sidebar-box:not([sidebarcommand="treestyletab_piro_sakura_ne_jp-sidebar-action"]) {
  min-width: var(--wide-tab-width) !important;
  max-width: none !important;
}
#sidebar-box[sidebarcommand="treestyletab_piro_sakura_ne_jp-sidebar-action"] {
  overflow: hidden !important;
  position: relative !important;
  transition: all 120ms !important;
  min-width: var(--thin-tab-width) !important;
  max-width: var(--thin-tab-width) !important;
  z-index: 1;
  border-right: 0px solid black !important;
}
#sidebar-box[sidebarcommand="treestyletab_piro_sakura_ne_jp-sidebar-action"]:hover,
#sidebar-box[sidebarcommand="treestyletab_piro_sakura_ne_jp-sidebar-action"] #sidebar {
  transition: all 120ms !important;
  min-width: var(--wide-tab-width) !important;
  max-width: var(--wide-tab-width) !important;
  margin-right: calc((var(--wide-tab-width) - var(--thin-tab-width)) * -1) !important;
  z-index: 1;
  border-right: 0px solid black !important;
}


/* URL BAR */
#urlbar-background { border: none !important; }
#identity-box {	display: none;  }
#urlbar-background { animation: none !important;  }


/* URL BAR animations */
/*  See https://github.com/ChiD12/firefox/blob/master/userChrome.css */
/* Library, Sidebar, Navigations */
#library-button .toolbarbutton-icon,
#sidebar-button .toolbarbutton-icon,
#back-button .toolbarbutton-icon,
#forward-button .toolbarbutton-icon,
#reload-button .toolbarbutton-icon{
  width: 0px !important;
  height: 28px !important;
  transition: all 1.0s;
}
#navigator-toolbox:hover #library-button .toolbarbutton-icon,
#navigator-toolbox:hover #sidebar-button .toolbarbutton-icon,
#navigator-toolbox:hover #back-button .toolbarbutton-icon,
#navigator-toolbox:hover #forward-button .toolbarbutton-icon,
#navigator-toolbox:hover #reload-button .toolbarbutton-icon{
  transform: rotate(360deg);
  width: 28px !important;
  transition: all 0.12s;
}
#pocket-button,
#pageActionButton,
#star-button{
  width: 0px !important;
  height: 24px !important;
  transition: all 1.0s;
}
#navigator-toolbox:hover #pocket-button,
#navigator-toolbox:hover #pageActionButton,
#navigator-toolbox:hover #star-button{
  transform: rotate(360deg);
  width: 24px !important;
  transition: all 0.12s;
}
#personal-bookmarks .toolbarbutton-icon,
#tracking-protection-icon-box,
#fxa-avatar-image, 
.toolbarbutton-badge-stack .toolbarbutton-icon {
  width: 0px !important;
  min-height: 0px !important;
  min-width: 0px !important;
  height: 16px !important;
  transition: all 1.0s;
}
#navigator-toolbox:hover #personal-bookmarks .toolbarbutton-icon,
#navigator-toolbox:hover #tracking-protection-icon-box,
#navigator-toolbox:hover #fxa-avatar-image,
#navigator-toolbox:hover .toolbarbutton-badge-stack .toolbarbutton-icon {
  transform: rotate(-360deg);
  width: 16px !important;
  min-height: 0px !important;
  min-width: 0px !important;
  transition: all 0.12s;
}
.toolbarbutton-badge {
  width: 0px !important;
  min-height: 0px !important;
  min-width: 0px !important;
  height: 0px !important;
  transition: all 1.0s;
}
#navigator-toolbox:hover .toolbarbutton-badge {
  transform: rotate(-360deg);
  width: 10px !important;
  min-height: 10px !important;
  min-width: 12px !important;
  transition: all 0.12s;
}
/* TRACKING SHIELD  animation */
#tracking-protection-icon-animatable-image{
  width: 0px !important;
  transition: all 1.0s;
}
#navigator-toolbox:hover #tracking-protection-icon-animatable-image{
  transform: rotate(720deg);
  width: 272px !important;
  transition: all 0.12s;
}

